# gggdtparser

./: README.md  dtconfigs.py  dtformat.md  dtparser.py  setup.cfg  setup.py  test.md  test.py
gggdtparser/: __init__.py  dtconfigs.py  dtframe.py  dtparser.py  test.py  utils.py
gggdtparser/langs/: __init__.py  _id.py  az.md  az.py  de.py  default.py  en.py  es.py  fra.py  hi.py  ja.py  ky.py  mr.py  ru.py  rw.py  si.py  so.py  sw.py  swe.py  tg.py  tr.py  uk.py  ur.py  vie.py  zh.py  zht.py
gggdtparser/test/: __init__.py  _id.py  az.py  hi.py  ky.py  mr.py  ru.py  rw.py  si.py  sw.py  tg.py  tr.py  uk.py  ur.py
