[metadata]
name = gggdtparser
version = 0.1.0
author = kusen
author_email = hu1194542196@qq.com
description = 通用、便捷、准确的字符串时间解析工具
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

url = https://github.com/kusen-alpha/gggdtparser
platforms = any
project_urls =
    Bug Tracker = https://github.com/kusen-alpha/gggdtparser/issues
    Documentation = https://github.com/kusen-alpha/gggdtparser/blob/master/README.md
    Source Code = https://github.com/kusen-alpha/gggdtparser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: